增加测点过滤

--- a/master/templates/base.html
+++ b/master/templates/base.html
@@ -10,7 +10,7 @@
 <body>
   <nav class="navbar navbar-expand-lg navbar-light .ml-auto mb-4" style="background-color:#decdc3">
     <div class="container">
-      <a class="navbar-brand" href="{% url 'upload' %}">首页</a>
+      <a class="navbar-brand" href="{% url 'echarts' %}">首页</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
