--- a/master/templates/echarts.html
+++ b/master/templates/echarts.html
@@ -2,7 +2,7 @@
 {% load staticfiles %}
 {% block content %}
 
-    <h3p class="title" style="text-align: center">数据视图</h3p>
+    <h3 class="title" style="text-align: center">数据视图</h3>
            <div id="container" style="width:100%;height:400px"></div>
            <script type="text/javascript" src="{% static 'js/echarts.min.js' %}"></script>
            <script type="text/javascript" src="{% static 'js/jquery.ba-resize.js' %}"></script>
