--- a/templates/upload.html
+++ b/templates/upload.html
@@ -2,9 +2,11 @@
 
 {% block content %}
   <h2>上传文件</h2>
-     <form id="form"  enctype="multipart/form-data" action="/upload/" method="post">
+     <form enctype="multipart/form-data" action="/upload/" method="post">
+        <div class="form-group">
          {% csrf_token %}
-      <p><input type="file"  name="datafile"></p>
-    <button type="submit" class="btn btn-primary">上传</button>
+         <p><input type="file"  name="datafile"></p>
+        </div>
+         <button type="submit" class="btn btn-primary">上传</button>
   </form>
 {% endblock %}
