--- a/templates/dataList.html
+++ b/templates/dataList.html
@@ -40,10 +40,10 @@
                 <tr class="text-center">
                     <td>{{ data.sensor__name}}</td>
                     <td>{{ data.ObservationDate }}</td>
-                    <td>{{ data.R1 }}</td>
-                    <td>{{ data.R2 }}</td>
-                    <td>{{ data.F1 }}</td>
-                    <td>{{ data.F2 }}</td>
+                    <td>{{ data.R1|floatformat:"2"  }}</td>
+                    <td>{{ data.R2|floatformat:"2"  }}</td>
+                    <td>{{ data.F1|floatformat:"2"  }}</td>
+                    <td>{{ data.F2|floatformat:"2"  }}</td>
                 </tr>
                 {% endfor %}
                 </tbody>
